Fix vertical alignment of text in DataTables
[INT-1293]

--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -171,6 +171,8 @@
 
   .rt-td {
     padding: .5rem .625rem .625rem;
+    display: flex;
+    align-items: center;
   }
 
   .rt-th,
